--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -4,11 +4,11 @@
 				<li><a href="/data/incidents">Data</a></li>
 				<li><a href="/investigations">Investigations</a></li>
 				<li><a href="/about">About</a></li>
-				<li><a href="/contribute">Contribute</a></li>			
+				<li><a href="/contribute">Contribute</a></li>
 			</ul>
 			<ul class="supporting">
 				<li><a href="/glossary">Glossary</a></li>
-				<li><a href="/principles">Principles</a></li>	
+				<li><a href="/principles">Principles</a></li>
 			</ul>
 		</nav>
 		<ul class="footer-contact contact  supporting">
@@ -16,7 +16,7 @@
 			<li><a class="github" href="https://github.com/DetentionLogs/" title="Detention Logs on Github" rel="me">GitHub</a></li>
 		</ul>
 		<ul class="footer-contact contact  supporting">
-			<li><a class="email" href="mailto:detentionlogs@gmail.com" title="contact Detention Logs team via email">Contact</a></li>
+			<li><a class="email" href="/about/#contact" title="Contact Detention Logs.">Contact</a></li>
 <!-- 			<li><a class="phone google-voice" href="">+08 173 453 235</a></li> -->
 		</ul>
 	</footer>
