--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -46,7 +46,7 @@ for conditions in Australia's immigration detention network.</p>
 			<li><a class="github" href="https://github.com/DetentionLogs/" title="Detention Logs on Github" rel="me">GitHub</a></li>
 		</ul>
 		<ul class="footer-contact contact  supporting">
-			<li><a class="email" href="mailto:detentionlogs@gmail.com">Contact</a></li>
+            <li><a class="email" href="/about/#contact" title="Contact Detention Logs.">Contact</a></li>
 		</ul>
 
 	</footer>
