add reporting recipe to footer

--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -9,6 +9,7 @@
 			<ul class="supporting">
 				<li><a href="/glossary">Glossary</a></li>
 				<li><a href="/principles">Principles</a></li>
+				<li><a href="/investigations/recipe">Reporting Recipe</a></li>
 			</ul>
 		</nav>
 		<ul class="footer-contact contact  supporting">
