--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -32,12 +32,15 @@ for conditions in Australia's immigration detention network.</p>
 
 	    <p class="discrete">Follow <a href="http://twitter.com/detentionlogs" title="The Detention Logs Twitter profile.">@DetentionLogs</a> for updates</p>
     </section>
+
 	<footer role="contentinfo" class="main site-footer">
 		<nav class="footer-nav" id="navigation">
 			<ul class="supporting">
 				<li><a href="/glossary">Glossary</a></li>
 
 				<li><a href="/principles">Our Principles</a></li>
+
+                <li><a href="/investigations/recipe">Reporting Recipe</a></li>
 			</ul>
 		</nav>
 		<ul class="footer-contact contact  supporting">
