remove Paul from contributors for now

--- a/app/views/pages/about.html.erb
+++ b/app/views/pages/about.html.erb
@@ -51,7 +51,7 @@
 		    <dd><a href="http://equivalentideas.com" title="Luke Bacon's website.">Luke Bacon</a></dd>
 
 			<dt>Current Contributors</dt>
-	        <dd><a href="http://twitter.com/FarrellPF" title="Paul Farrell on Twitter.">Paul Farrell</a>, <a href="https://twitter.com/pipb25" title="Pip Brown on Twitter.">Pip Brown</a></dd>
+	        <dd><a href="https://twitter.com/pipb25" title="Pip Brown on Twitter.">Pip Brown</a></dd>
 
 			<dt>Founders</dt>
 	        <dd><a href="http://equivalentideas.com" title="Luke Bacon's website.">Luke Bacon</a>, <a href="http://twitter.com/Lawrence_Bull" title="Lawrence Bull on Twitter">Lawrence Bull</a>, <a href="http://twitter.com/FarrellPF" title="Paul Farrell on Twitter">Paul Farrell</a></dd>
