--- a/app/views/incidents/adopt.html.erb
+++ b/app/views/incidents/adopt.html.erb
@@ -7,33 +7,33 @@
 
 <article class="main reading">
 	<h1>Adopt Incident <%= @incident.incident_number %></h1>
-	
+
 	<p class="lede">Bring to light more information about what occurred.</p>
 
-	<p>Request the Detailed Incident Report from the Immigration Department. It’s easy. Freedom of Information (FOI) laws allow anyone to access government documents. We’ve used <abbr title="A project by the OpenAustralia Foundation to make FOI easier and communal.">Right To Know</abbr>’s FOI tool so you can do this in just a few clicks.</p>
-	
+	<p>Request the Detailed Incident Report from the Immigration Department. It’s easy. Freedom of Information (FOI) laws allow anyone to access government documents. We’ve used the Right To Know FOI tool so you can do this in just a few clicks.</p>
+
 	<p><strong><%=link_to_right_to_know_form(@incident) %></strong></p>
-	
+
 	<h3 id="what a detailed incident report is">What a Detailed Incident Report is</h3>
-	
+
 	<p>The Detailed Incident Report reveals more of the Government’s information about the incident such as who was involved, what happened, and which other incidents are related. These reports are extremely useful for investigating the detention network and provide important information about a range of detention issues (see an <a href="http://s3.amazonaws.com/detention_logs/incidents/detailed_reports/000/050/330/original/1-3CTBC9.pdf?1370745305">example of a Detailed Incident Report</a>).</p>
-	
+
 	<h3 id="why-do-it">Why do it</h3>
-	
+
 	<p>This is a way for everybody to help increase transparency and accountability in Australian detention facilities. If this is an incident that you think warrants further investigation, if you think it raises more questions than it answers or if you simply want more details about it then this is how you can contribute.</p>
-	
+
 	<h3 id="what-to-expect">What to expect</h3>
-	
+
 	<p>Lodging a freedom of information request is easy. There is no application fee so all you need to do is <%=link_to_right_to_know_form(@incident, "follow the ‘submit a request’ link") %>, where you’ll find a pre-written request for the detailed report of the incident summary you were just exploring (<%= link_to( "Incident #{@incident.incident_number}" , @incident, :title => "Go back to the summary of Incident #{@incident.incident_number}")  %>).</p>
-	
+
 	<p>The work of communicating back and forth with your FOI decision maker gets handled through the Right to Know website, a fantastic tool that makes it easy to use Australia’s FOI system. At Right To Know requests are listed publicly which means that others can help you with your request if anything comes up, and once released, the documents you request go public straight away. We’ll add those documents to the incident reports on our site so everyone can access this public information.</p>
-	
+
 	<p>Once the Department of Immigration and Citizenship has acknowledged your request, one of the first things they’ll do is request an extension of time. We recommend you don’t consent to this extension because the documents you’ll be requesting aren’t very long and it shouldn’t take much time to process.</p>
-	
+
 	<p>If you request too many incidents the Department may try to charge you or say that it’s an unreasonable diversion of their resources and refuse to process it. We recommend that you limit the amount of incidents you request to between one and five to reduce any potential costs.</p>
-	
+
   <p><strong><%=link_to_right_to_know_form(@incident) %></strong></p>
-	
+
 	<h3 class="discrete">More information</h3>
 	<ul class="discrete">
 	<li><a href="http://www.oaic.gov.au/foi-portal/about_foi.html">Learn more about FOI</a></li>
