--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -3,30 +3,19 @@
 <!--[if IE 7]>         <html class="no-js lt-ie9 lt-ie8"> <![endif]-->
 <!--[if IE 8]>         <html class="no-js lt-ie9"> <![endif]-->
 <!--[if gt IE 8]><!--> <html class="no-js"> <!--<![endif]-->
-    <head>
-        <meta charset="utf-8">
-        <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-        <title><%= yield(:title) %> | Detention Logs</title>
+<head>
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
+    <title><%= yield(:title) %> | Detention Logs</title>
 
-        <meta name="author" content="Detention Logs">
-        <meta name="description" content="<%= yield(:description)%>">
-        <meta name="viewport" content="width=device-width">
-	    <%= stylesheet_link_tag    "style", :media => "all" %>
-	    <%= csrf_meta_tag %>
+    <meta name="author" content="Detention Logs">
+    <meta name="description" content="<%= yield(:description)%>">
+    <meta name="viewport" content="width=device-width">
+  <%= stylesheet_link_tag    "style", :media => "all" %>
+  <%= csrf_meta_tag %>
 
-    </head>
-    <body class="principles">
-	<header class="site-header">
-    	<h1 class="logo"><a href="/" rel="home">Detention&nbsp;Logs<span> beta</span></a> 
-    	<p class="subheading discrete">Inside Australia's immigration detention</p>
-    	</h1>
-    	<nav class="main-nav">
-    		<a href="#navigation" class="menu-btn">Menu</a>
-			<ul class="primary-nav">
-				<li><a href="/data/incidents">Data</a></li>
-				<li><a href="/investigations">Investigations</a></li>
-				<li><a href="/about">About</a></li>
-				<li><a href="/contribute">Contribute</a></li>	
-			</ul>
-		</nav>
-    </header>
+</head>
+
+<body class="principles">
+
+<%= render 'layouts/site-header' %>
