--- a/app/views/layouts/_primary-nav.html.erb
+++ b/app/views/layouts/_primary-nav.html.erb
@@ -1,6 +1,6 @@
 <ul class="primary-nav">
-    <li><%= link_to incidents_path %></li>
-    <li><a href="/investigations">Investigations</a></li>
-    <li><a href="/about">About</a></li>
-    <li><a href="/contribute">Contribute</a></li>
+  <li><%= link_to "Data", :incidents %></li>
+  <li><%= link_to "Investigations", :investigations %></li>
+  <li><%= link_to "About", :about %></li>
+  <li><%= link_to "Contribute", :contribute %></li>
 </ul>
