--- a/app/views/layouts/_secondary-nav.html.erb
+++ b/app/views/layouts/_secondary-nav.html.erb
@@ -1,6 +1,6 @@
 <ul class="secondary-nav">
-    <li><a href="/glossary">Glossary</a></li>
-    <li><a href="/investigations/recipe">Reporting Recipe</a></li>
-    <li><a href="/principles">Principles</a></li>
-    <li><a href="/copyright" rel="license">Copyright: CC BY</a></li>
+    <li><%= link_to "Glossary", :glossary %></li>
+    <li><%= link_to "Reporting Recipe", :investigations_recipe %></li>
+    <li><%= link_to "Principles", :principles %></li>
+    <li><%= link_to "Copyright: CC BY", :copyright %></li>
 </ul>
