--- a/app/views/pages/contribute.html.erb
+++ b/app/views/pages/contribute.html.erb
@@ -1,13 +1,16 @@
-<% title "Contribute" %>
+<%
+	title "Contribute"
 
-<% description "Find out how you can help improve and expand the Detention Logs project." %>
+	description "Find out how you can help improve and expand the Detention Logs project."
+%>
 
-
-<%= render 'layouts/header' %>
+<%= render 'layouts/sub-nav', :breadcrumbs => false %>
 
     <article role="main" class="main reading">
 		<h1>How you can help</h1>
+
 		<h2>Adopt an incident</h2>
+
 		<p>Too often debate about immigration in Australia is reduced to tag lines and
 		jingoism. Facts are hard to come by, and part of the reason is the limited access to
 		detention centres given to journalists. But the data collected by Detention Logs
@@ -46,6 +49,3 @@
 		incidents up to the present day. The more summary data we get, the more you can help
 		to expose what’s happening in detention facilities - across the country and abroad.</p>
     </article>
-
-	
-<%= render 'layouts/footer' %>
