--- a/app/views/incidents/adopt.html.erb
+++ b/app/views/incidents/adopt.html.erb
@@ -1,42 +1,40 @@
-<% title "Adopt Incident #{@incident.incident_number}" %>
-<% description "Help bring to light more information about incident #{@incident.incident_number} by submitting a Freedom of Information Request for its Detailed Incident Report" %>
+<%
+  title "Adopt Incident #{@incident.incident_number}"
 
-<nav class="breadcrumbs supporting main">
-	<p><!-- <a href="/data/">Data</a> &gt;  --><a href="/data/incidents/" title="Explore incident records from Australia's immigration detention network">Incidents</a> &gt; <a href="<%=  url_for @incident %>" title="Page for Incident <%= @incident.incident_number %>"><%= @incident.incident_number %></a> &gt; <a href="<%= url_for(@incident) %>/adopt" title="help get more information about this incident">Adopt</a></p>
-</nav>
+  description "Help bring to light more information about incident #{@incident.incident_number} by submitting a Freedom of Information Request for its Detailed Incident Report"
+%>
 
-<article class="main reading">
-	<h1>Adopt Incident <%= @incident.incident_number %></h1>
+<%= render 'layouts/sub-nav', :breadcrumbs => true %>
 
-	<p class="lede">Bring to light more information about what occurred.</p>
+<article class="body-container main-reading incident-adopt-body" role="main">
+  <%= render 'incidents/adopt-callout' %>
 
-	<p>Request the Detailed Incident Report from the Immigration Department. It’s easy. Freedom of Information (FOI) laws allow anyone to access government documents. We’ve used the Right To Know FOI tool so you can do this in just a few clicks.</p>
+  <h1>Adopt Incident <%= @incident.incident_number %></h1>
 
-	<p><strong><%=link_to_right_to_know_form(@incident) %></strong></p>
+  <p>Request the Detailed Incident Report from the Immigration Department. It&rsquo;s easy. Freedom of Information (FOI) laws allow anyone to access government documents. We&rsquo;ve used the Right To Know FOI tool so you can do this in just a few clicks.</p>
 
-	<h3 id="what a detailed incident report is">What a Detailed Incident Report is</h3>
+  <h2 id="what">What is a Detailed Incident Report?</h2>
 
-	<p>The Detailed Incident Report reveals more of the Government’s information about the incident such as who was involved, what happened, and which other incidents are related. These reports are extremely useful for investigating the detention network and provide important information about a range of detention issues (see an <a href="http://s3.amazonaws.com/detention_logs/incidents/detailed_reports/000/050/330/original/1-3CTBC9.pdf?1370745305">example of a Detailed Incident Report</a>).</p>
+  <p>The Detailed Incident Report reveals more of the Government&rsquo;s information about the incident such as the names of staff who were involved, a more detailed account of what happened, and which other incidents are related to this one. These reports are extremely useful for investigating the detention network and provide important information about a range of detention issues. For example, see <a href="http://s3.amazonaws.com/detention_logs/incidents/detailed_reports/000/050/330/original/1-3CTBC9.pdf?1370745305">Detailed Incident Report 1-3CTBC9</a> and compare to the <a href="http://detentionlogs.com.au/data/incidents/50330">summary incident report</a>.</p>
 
-	<h3 id="why-do-it">Why do it</h3>
+  <h2 id="why-do-it">Why make a request?</h2>
 
-	<p>This is a way for everybody to help increase transparency and accountability in Australian detention facilities. If this is an incident that you think warrants further investigation, if you think it raises more questions than it answers or if you simply want more details about it then this is how you can contribute.</p>
+  <p>This is a way for everybody to help increase transparency and accountability in Australian detention facilities. If this is an incident that you think warrants further investigation, if you think it raises more questions than it answers or if you simply want more details about it then this is how to get them. Adopting this incident is a great way you can contribute to the Detention Logs project.</p>
 
-	<h3 id="what-to-expect">What to expect</h3>
+  <h2 id="what-to-expect">What should I expect?</h2>
 
-	<p>Lodging a freedom of information request is easy. There is no application fee so all you need to do is <%=link_to_right_to_know_form(@incident, "follow the ‘submit a request’ link") %>, where you’ll find a pre-written request for the detailed report of the incident summary you were just exploring (<%= link_to( "Incident #{@incident.incident_number}" , @incident, :title => "Go back to the summary of Incident #{@incident.incident_number}")  %>).</p>
+  <p>Lodging a freedom of information request is easy. There is no application fee so all you need to do is <a href="#" title="opens a prefilled Freedom of Information request using the Right To Know FOI tool">follow the &lsquo;Adopt Incident 1-2TB9HT&rsquo; link</a>. You&rsquo;ll find a pre-written request for the detailed report of the incident summary you were just exploring (<a href="/data/incidents/50639" title="Go back to the summary of Incident 1-2PK97X">Incident 1-2TB9HT</a>).</p>
 
-	<p>The work of communicating back and forth with your FOI decision maker gets handled through the Right to Know website, a fantastic tool that makes it easy to use Australia’s FOI system. At Right To Know requests are listed publicly which means that others can help you with your request if anything comes up, and once released, the documents you request go public straight away. We’ll add those documents to the incident reports on our site so everyone can access this public information.</p>
+  <p>The work of communicating back and forth with your FOI decision maker gets handled through the Right to Know website, a fantastic tool that makes it easy to use Australia&rsquo;s FOI system. At Right To Know requests are listed publicly which means that others can help you with your request if anything comes up, and once released, the documents you request go public straight away. We&rsquo;ll add those documents to the incident reports on our site so everyone can access this public information.</p>
 
-	<p>Once the Department of Immigration and Citizenship has acknowledged your request, one of the first things they’ll do is request an extension of time. We recommend you don’t consent to this extension because the documents you’ll be requesting aren’t very long and it shouldn’t take much time to process.</p>
+  <p>Once the Department of Immigration and Citizenship has acknowledged your request, one of the first things they&rsquo;ll do is request an extension of time. We recommend you don&rsquo;t consent to this extension because the documents you&rsquo;ll be requesting aren&rsquo;t very long and it shouldn&rsquo;t take them much time to process.</p>
 
-	<p>If you request too many incidents the Department may try to charge you or say that it’s an unreasonable diversion of their resources and refuse to process it. We recommend that you limit the amount of incidents you request to between one and five to reduce any potential costs.</p>
+  <p>If you request too many incidents the Department may try to charge you or say that it&rsquo;s an unreasonable diversion of their resources and refuse to process it. We recommend that you limit the amount of incidents you request at any one time to between one and five to reduce any potential costs.</p>
 
-  <p><strong><%=link_to_right_to_know_form(@incident) %></strong></p>
+  <h2>More information</h2>
 
-	<h3 class="discrete">More information</h3>
-	<ul class="discrete">
-	<li><a href="http://www.oaic.gov.au/foi-portal/about_foi.html">Learn more about FOI</a></li>
-	<li><a href="https://www.righttoknow.org.au/">Check out the Right To Know project</a>.</li>
-	</ul>
+  <ul>
+      <li><a href="http://www.oaic.gov.au/foi-portal/about_foi.html">Learn more about FOI</a></li>
+      <li><a href="https://www.righttoknow.org.au/">Check out the Right To Know project</a>.</li>
+  </ul>
 </article>
