--- a/app/views/layouts/_logo.html.erb
+++ b/app/views/layouts/_logo.html.erb
@@ -1,4 +1,4 @@
-<a class="banner" href="{{ link.tempate-homepage }}" rel="home">
+<a class="banner" href="<%= root_url %>" rel="home">
     <h1 class="logo">Detention Logs</h1>
     <p class="tagline">Inside Australia's immigration detention</p>
 </a>
