--- a/app/views/layouts/_site-header.html.erb
+++ b/app/views/layouts/_site-header.html.erb
@@ -1,7 +1,7 @@
 <header class="site-header" id="top" role="banner">
     <%= render 'layouts/logo' %>
 
-    <a class="skip-link" href="#content">Skip to main content</a>
+    <a class="skip-link" href="#main">Skip to main content</a>
 
     <a class="btn btn-menu" href="#navigation" title="To website navigation.">Menu</a>
 
