port new markup from patternlab

--- a/app/views/pages/contribute.html.erb
+++ b/app/views/pages/contribute.html.erb
@@ -12,7 +12,7 @@
       <h1>How you can help</h1>
     </header>
 
-    <h2>Adopt an incident</h2>
+    <h2 id="adopt-an-incident">Adopt an incident</h2>
 
     <p>Too often debate about immigration in Australia is reduced to tag lines and jingoism. Facts are hard to come by, and part of the reason is the limited access to detention centres given to journalists. But the data collected by Detention Logs
     arms the public, politicians and journalists with vital facts about detention centres - and there’s a way for everyone to help in opening immigration detention.</p>
@@ -25,7 +25,7 @@
 
     <p>You can request as many incidents as you want, but be careful - the more you ask for the more likely the department will be to charge you. And if you ask for too many, (say 40 or 50) they may refuse to process your request on the grounds that it substantially diverts their resources. To avoid this, we recommend you ask for one to five incidents.</p>
 
-    <h3>How do you adopt an incident?</h3>
+    <h3 id="adopt-an-incident-how">How do you adopt an incident?</h3>
 
     <p>Requesting an incident is easy. Once you’ve identified an incident you think there should be more information about you can click the “Adopt an incident” button on the top right hand side of the screen. This will take you directly to the Right to Know website, which is a publicly accessible site for lodging freedom of information requests. The form will already be filled in with the incident you’ve just been exploring, so all you need to do is fill in your name and hit send.</p>
 
