--- a/app/views/pages/about.html.erb
+++ b/app/views/pages/about.html.erb
@@ -1,70 +1,61 @@
-<% title "About" %>
-<% description "What, where, who and why information about Detention Logs, a new independent project committed to transparency and accountability in Australia’s immigration detention network." %>
+<%
+  title "About"
 
-<%= render 'layouts/header' %>
+  description "About Detention Logs, a new independent project committed to transparency and accountability in Australia’s immigration detention network."
+%>
 
-    <article role="main" class="main reading page-about">
-		<h1>About Detention Logs</h1>
-		<p>Detention Logs is a new independent project committed to transparency and
-		accountability in Australia’s immigration detention network. We aim to support those
-		reporting on and discussing these issues by breaking through misinformation and
-		political spin.</p>
+<%= render 'layouts/sub-nav', :breadcrumbs => false %>
 
-		<p>Immigration detention is one of the most hotly debated, contested and emotional
-		topics in Australia, but journalists’ access to detention centres is limited and
-		information from the inside is scarce. Public policy surrounding asylum seekers and
-		immigration should be shaped by informed opinions, and our mission is to arm the
-		public with those vital facts to raise the standard of discussion.</p>
+<section class="body-container" id="main" role="main" >
+  <article class="main-reading">
+    <header class="article-header">
+      <h1>About Detention Logs</h1>
+    </header>
 
-		<p>We have a special focus on supporting journalists in understanding and accessing
-		more information to help them investigate and report on immigration detention. We
-		also produce our own original reporting and analysis of the data that we publish to
-		help explain its significance and put the questions it raises to those accountable.</p>
+    <p>Detention Logs is a new independent project committed to transparency and accountability in Australia’s immigration detention network. We aim to support those reporting on and discussing these issues by breaking through misinformation and political spin.</p>
 
-		<h2 id="beta">What’s the “beta” mean?</h2>
+    <p>Immigration detention is one of the most hotly debated, contested and emotional topics in Australia, but journalists’ access to detention centres is limited and information from the inside is scarce. Public policy surrounding asylum seekers and immigration should be shaped by informed opinions, and our mission is to arm the public with those vital facts to raise the standard of discussion.</p>
 
-		<p>It means that this is just the beginning. We’ve released the first set of detention
-		incidents as quickly as possible. The trade off is that we’ve got a lot of work to
-		do adding functionality to this site, such as improved searching and filtering
-		options. As we continue to build and expand the site we want to hear from our
-		audience what features they would like to see, so please contact us for any
-		feedback, contributions or requests.</p>
+    <p>We have a special focus on supporting journalists in understanding and accessing more information to help them investigate and report on immigration detention. We also produce our own original reporting and analysis of the data that we publish to help explain its significance and put the questions it raises to those accountable.</p>
 
-		<h2 id="contact">Contact Detention Logs</h2>
-        <dl>
-            <dt>Email</dt>
-            <dd><a href="&#x6D;&#x61;&#105;&#x6C;&#116;&#111;:&#100;&#x65;&#x74;&#101;&#110;&#x74;&#x69;o&#x6E;&#108;&#x6F;g&#115;&#64;&#114;&#x69;&#x73;&#x65;&#x75;&#x70;&#x2E;&#110;&#101;&#116;" title="Email Detention Logs">&#100;&#x65;&#x74;&#101;&#110;&#x74;&#x69;o&#x6E;&#108;&#x6F;g&#115;&#64;&#114;&#x69;&#x73;&#x65;&#x75;&#x70;&#x2E;&#110;&#101;&#116;</a></dd>
+    <h2 id="beta">What’s the “beta” mean?</h2>
 
-            <dt>PGP Public Key</dt>
-            <dd><a href="https://drive.google.com/file/d/0B3KLm42FZ4JfbFhwZjZEc1BNbzg/edit?usp=sharing" title="Access the Detention Logs PGP Public Key Block document.">Detention Logs Public Key</a></dd>
+    <p>It means that this is just the beginning. We’ve released the first set of detention incidents as quickly as possible. The trade off is that we’ve got a lot of work to do adding functionality to this site, such as improved searching and filtering options. As we continue to build and expand the site we want to hear from our audience what features they would like to see, so please contact us for any feedback, contributions or requests.</p>
 
-            <dt>Fingerprint</dt>
-            <dd>E86C 5B8C 576E 00EB 2250 746E 01F0 796E 12B0 24A3</dd>
-        </dl>
+    <h2 id="contact">Contact Detention Logs</h2>
 
-        <p>You can also connect with Detention Logs on <a href="https://twitter.com/detentionlogs" title="Detention Logs Twitter Profile">Twitter with @detentionlogs</a> and on <a href="https://github.com/DetentionLogs" title="Detention Logs profile on GitHub">Github with DetentionLogs</a>.</p>
+    <dl>
+      <dt>Email</dt>
+      <dd><a href="&#x6D;&#x61;&#105;&#x6C;&#116;&#111;:&#100;&#x65;&#x74;&#101;&#110;&#x74;&#x69;o&#x6E;&#108;&#x6F;g&#115;&#64;&#114;&#x69;&#x73;&#x65;&#x75;&#x70;&#x2E;&#110;&#101;&#116;" title="Email Detention Logs">&#100;&#x65;&#x74;&#101;&#110;&#x74;&#x69;o&#x6E;&#108;&#x6F;g&#115;&#64;&#114;&#x69;&#x73;&#x65;&#x75;&#x70;&#x2E;&#110;&#101;&#116;</a></dd>
 
-		<h2 id="team">The Team</h2>
+      <dt>PGP Public Key</dt>
+      <dd><a href="https://drive.google.com/file/d/0B3KLm42FZ4JfbFhwZjZEc1BNbzg/edit?usp=sharing" title="Access the Detention Logs PGP Public Key Block document.">Detention Logs Public Key</a></dd>
 
-		<dl>
-			<dt>Editor</dt>
-		    <dd><a href="http://equivalentideas.com" title="Luke Bacon's website.">Luke Bacon</a></dd>
+      <dt>Fingerprint</dt>
+      <dd>E86C 5B8C 576E 00EB 2250 746E 01F0 796E 12B0 24A3</dd>
+    </dl>
 
-			<dt>Current Contributors</dt>
-	        <dd><a href="https://twitter.com/pipb25" title="Pip Brown on Twitter.">Pip Brown</a></dd>
+    <p>You can also connect with Detention Logs on <a href="https://twitter.com/detentionlogs" title="Detention Logs Twitter Profile">Twitter with @detentionlogs</a> and on <a href="https://github.com/DetentionLogs" title="Detention Logs profile on GitHub">Github with DetentionLogs</a>.</p>
 
-			<dt>Founders</dt>
-	        <dd><a href="http://equivalentideas.com" title="Luke Bacon's website.">Luke Bacon</a>, <a href="http://twitter.com/Lawrence_Bull" title="Lawrence Bull on Twitter">Lawrence Bull</a>, <a href="http://twitter.com/FarrellPF" title="Paul Farrell on Twitter">Paul Farrell</a></dd>
+    <h2 id="team">The Team</h2>
 
-			<dt>Data Processing</dt>
-	        <dd><a href="http://equivalentideas.com" title="Luke Bacon's website.">Luke Bacon</a>, <a href="https://twitter.com/pipb25" title="Pip Brown on Twitter.">Pip Brown</a>, <a href="http://twitter.com/Lawrence_Bull" title="Lawrence Bull on Twitter">Lawrence Bull</a>, <a href="http://twitter.com/FarrellPF" title="Paul Farrell on Twitter">Paul Farrell</a>, Vincent Farrell, and <a href="http://peterwilliamfrancis.tumblr.com/">Peter Francis</a></p></dd>
+    <dl>
+      <dt>Editor</dt>
+        <dd><a href="http://equivalentideas.com" title="Luke Bacon's website.">Luke Bacon</a></dd>
 
-			<dt>Website</dt>
-			<dd><a href="http://equivalentideas.com" title="Luke Bacon's website.">Luke Bacon</a></p></dd>
-		</dl>
+      <dt>Current Contributors</dt>
+        <dd><a href="https://twitter.com/pipb25" title="Pip Brown on Twitter.">Pip Brown</a></dd>
 
-		<p>Thanks to <a href="http://wendybacon.com">Wendy Bacon</a>, <a href="http://bryanmcleod.com.au/">Bryan McLeod</a>, <a href="http://theglobalmail.org/">The Global Mail</a>, <a href="http://newmatilda.com/">New Matilda</a>, <a href="http://openaustralia.org">Open Australia</a>, <a href="http://investigate.org.au">The Australian Centre for Independent Journalism</a> and <a href="http://guardian.co.uk/australia">The Guardian Australia</a>.</p>
-    </article>
+      <dt>Founders</dt>
+        <dd><a href="http://equivalentideas.com" title="Luke Bacon's website.">Luke Bacon</a>, <a href="http://twitter.com/Lawrence_Bull" title="Lawrence Bull on Twitter">Lawrence Bull</a>, <a href="http://twitter.com/FarrellPF" title="Paul Farrell on Twitter">Paul Farrell</a></dd>
 
+      <dt>Data Processing</dt>
+        <dd><a href="http://equivalentideas.com" title="Luke Bacon's website.">Luke Bacon</a>, <a href="https://twitter.com/pipb25" title="Pip Brown on Twitter.">Pip Brown</a>, <a href="http://twitter.com/Lawrence_Bull" title="Lawrence Bull on Twitter">Lawrence Bull</a>, <a href="http://twitter.com/FarrellPF" title="Paul Farrell on Twitter">Paul Farrell</a>, Vincent Farrell, and <a href="http://peterwilliamfrancis.tumblr.com/">Peter Francis</a></p></dd>
 
-<%= render 'layouts/footer' %>
+      <dt>Website</dt>
+        <dd><a href="http://equivalentideas.com" title="Luke Bacon's website.">Luke Bacon</a></p></dd>
+    </dl>
+
+    <p>Thanks to <a href="http://wendybacon.com">Wendy Bacon</a>, <a href="http://bryanmcleod.com.au/">Bryan McLeod</a>, <a href="http://theglobalmail.org/">The Global Mail</a>, <a href="http://newmatilda.com/">New Matilda</a>, <a href="http://openaustralia.org">Open Australia</a>, <a href="http://investigate.org.au">The Australian Centre for Independent Journalism</a> and <a href="http://guardian.co.uk/australia">The Guardian Australia</a>.</p>
+  </article>
+</section>
